Fix footer layout issues on mobile

--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,34 +1,40 @@
 footer {
-  font-family: $font-family-medium;
   padding: 2rem 0;
+  font-size: 100%;
 }
 
-.footer__element {
-  display: block;
+.footer {
+  &__element {
+    display: block;
 
-  &:not(:last-child)::after {
-    display: none;
+    &:not(:last-child)::after {
+      display: none;
+    }
   }
-}
 
-.footer__logo {
-  fill: $white;
-  position: absolute;
-  right: 0;
-  top: -.2rem;
-
-  svg {
-    max-height: 8rem;
-    max-width: 8rem;
+  &__flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
   }
-}
 
-.footer__header {
-  margin: 0;
-}
+  &__logo {
+    margin-bottom: -1rem;
 
-@media (max-width: $small-size) {
-  .footer__menu {
-    padding-bottom: 2rem;
+    svg {
+      fill: $white;
+      height: 9rem;
+      width: 9rem;
+      max-width: 20vw;
+      max-height: 20vw;
+      line-height: 0;
+    }
+  }
+
+  &__menu {
+    font-family: $font-family-medium;
+    @media (max-width: $small-size) {
+      padding-bottom: 2rem;
+    }
   }
 }
